@startuml proxyMONE
!theme plain
skinparam linetype ortho

class RouteService {
  - provider: IRouteProvider
  + requestRoute(origin, destination, mobilityType, routeType): Promise<IRouteData>
}

interface IRouteProvider <<interface>> {
  + getRoute(origin: string, destination: string, mobilityType: string, routeType: string): Promise<Route>
}

class RouteProxy {
  - cache: Map<string, Route>
  - realProvider: IRouteProvider
  + getRoute(origin: string, destination: string, mobilityType: string, routeType: string): Promise<Route>
}

class OpenRouteServiceAdapter {
  + getRoute(...): Promise<Route>
}
class Route

RouteService --> IRouteProvider : depende de la interfaz
IRouteProvider <|.. RouteProxy
IRouteProvider <|.. OpenRouteServiceAdapter
RouteProxy *--> IRouteProvider : referencia al real provider
RouteProxy ..> Route : responde desde caché
OpenRouteServiceAdapter ..> Route : crea entidades
RouteProxy --> OpenRouteServiceAdapter : realProvider


@enduml

